// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`inject cssvars > injectCSSVars: basic 1`] = `
"<style>.foo{ color: red }</style>
<style scoped>\\\\n/* created by @unplugin-vue-cssvars */\\\\n/* <inject start> */\\\\n.foo{color:v-bind(color)}\\\\n/* <inject end> */\\\\n
</style>"
`;

exports[`inject cssvars > injectCSSVars: multiple value 1`] = `
"<style>.foo{ color: red }</style>
<style scoped>\\\\n/* created by @unplugin-vue-cssvars */\\\\n/* <inject start> */\\\\n.foo{color:v-bind(color)}\\\\n/* <inject end> */\\\\n\\\\n/* created by @unplugin-vue-cssvars */\\\\n/* <inject start> */\\\\n.bar{color:v-bind(color)}\\\\n/* <inject end> */\\\\n
</style>"
`;

exports[`inject cssvars > injectCSSVars: unmatched key 1`] = `"<style>.foo{ color: red }</style>"`;

exports[`inject cssvars > injectCSSVars: vBindCode is null 1`] = `"<style>.foo{ color: red }</style>"`;
